# vfido2

./: .gitignore  CMakeLists.txt
config/: vfido
src/: cbor.cpp  cbor.hpp  const.hpp  credential.cpp  credential.hpp  crypto.cpp  device.cpp  device.hpp  error.hpp  event.cpp  event.hpp  extensions.hpp  make_authmakecred_response.cpp  make_cred_parsing.cpp  registration.cpp  registration.hpp  response.cpp  response.hpp  tpm.cpp  tpm.hpp  uhid_report.hpp  vfido.cpp
src/authentication/: authenticate.cpp  authenticate.hpp  get_assertion_parsing.cpp  get_assertion_response.cpp  get_assrtaion_response.cpp
src/cbor_operations/: cbor.cpp  cbor.hpp  get_assertion_parsing.cpp  make_cred_parsing.cpp
src/credentials/: credential.cpp  credential.hpp
src/cryptography/: crypto.cpp  crypto.hpp  tpm.cpp  tpm.hpp
src/registration/: make_authmakecred_response.cpp  make_credential_response.cpp  registration.cpp  registration.hpp
src/uv/: CMakeLists.txt
src/uv/src/: auth.cpp  auth.hpp
